--- a/app/src/main/res/drawable/ic_keyboard_shift_off.xml
+++ b/app/src/main/res/drawable/ic_keyboard_shift_off.xml
@@ -17,10 +17,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="@color/white"
     android:viewportHeight="24"
     android:viewportWidth="24">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M7,14l5,-5 5,5z" />
+        android:fillColor="@color/white"
+        android:pathData="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" />
 </vector>
