--- a/app/src/main/res/drawable/ic_keyboard_key_close.xml
+++ b/app/src/main/res/drawable/ic_keyboard_key_close.xml
@@ -15,10 +15,12 @@
    limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="32dp"
+    android:height="32dp"
     android:viewportHeight="16"
-    android:viewportWidth="16">
+    android:viewportWidth="16"
+    tools:ignore="UnusedResources">
     <path
         android:fillColor="@color/white"
         android:pathData="M3.204,5h9.592L8,10.481 3.204,5zM2.451,5.659 L7.247,11.139a1,1 0,0 0,1.506 0l4.796,-5.48c0.566,-0.647 0.106,-1.659 -0.753,-1.659L3.204,4a1,1 0,0 0,-0.753 1.659z"
