--- a/app/src/main/res/drawable/ic_keyboard_key_enter.xml
+++ b/app/src/main/res/drawable/ic_keyboard_key_enter.xml
@@ -14,7 +14,15 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_keyboard_shift_on" android:state_checked="true" />
-    <item android:drawable="@drawable/ic_keyboard_shift_off" />
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="32dp"
+    android:height="32dp"
+    android:tint="@color/white"
+    android:viewportHeight="24"
+    android:viewportWidth="24"
+    tools:ignore="UnusedResources">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M19,7v4H5.83l3.58,-3.59L8,6l-6,6 6,6 1.41,-1.41L5.83,13H21V7z" />
+</vector>
