--- a/app/src/main/res/layout/layout_keyboard_view.xml
+++ b/app/src/main/res/layout/layout_keyboard_view.xml
@@ -17,8 +17,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal|bottom"
-    android:background="?attr/background">
+    android:layout_gravity="center_horizontal|bottom">
 
     <com.litekite.ime.widget.KeyboardView
         android:id="@+id/v_keyboard"
