--- a/app/src/main/res/xml/keyboard_popup.xml
+++ b/app/src/main/res/xml/keyboard_popup.xml
@@ -15,7 +15,9 @@
    limitations under the License.
 -->
 <Keyboard xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:keyHeight="@dimen/keyboard_key_size"
     app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
-    app:keyHeight="@dimen/keyboard_popup_key_size"
-    app:keyWidth="@dimen/keyboard_popup_key_size"
-    app:keyVerticalGap="@dimen/keyboard_key_vertical_gap" />
+    app:keyVerticalGap="@dimen/keyboard_key_vertical_gap"
+    app:keyWidth="@dimen/keyboard_key_size"
+    tools:ignore="UnusedResources" />
