--- a/app/src/main/res/drawable/ic_keyboard_key_shift.xml
+++ b/app/src/main/res/drawable/ic_keyboard_key_shift.xml
@@ -23,6 +23,6 @@
     android:viewportWidth="24"
     tools:ignore="UnusedResources">
     <path
-        android:fillColor="@color/white"
+        android:fillColor="?colorButtonNormal"
         android:pathData="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" />
 </vector>
