--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
 
     <dimen name="keyboard_key_icon_mode_size">68dp</dimen>
 
+    <dimen name="keyboard_view_root_padding_top">10dp</dimen>
     <dimen name="keyboard_view_padding">5dp</dimen>
     <dimen name="keyboard_view_key_text_size">26dp</dimen>
     <dimen name="keyboard_view_key_punctuation_height">32dp</dimen>
