--- a/app/src/main/res/drawable/ic_keyboard_key_close.xml
+++ b/app/src/main/res/drawable/ic_keyboard_key_close.xml
@@ -18,11 +18,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:width="32dp"
     android:height="32dp"
+    android:tint="?colorButtonNormal"
+    android:tintMode="src_in"
     android:viewportHeight="16"
     android:viewportWidth="16"
     tools:ignore="UnusedResources">
     <path
-        android:fillColor="?colorButtonNormal"
+        android:fillColor="@color/white"
         android:pathData="M3.204,5h9.592L8,10.481 3.204,5zM2.451,5.659 L7.247,11.139a1,1 0,0 0,1.506 0l4.796,-5.48c0.566,-0.647 0.106,-1.659 -0.753,-1.659L3.204,4a1,1 0,0 0,-0.753 1.659z"
         android:strokeColor="?colorButtonNormal" />
 </vector>
