--- a/app/src/main/res/drawable/ic_keyboard_key_backspace.xml
+++ b/app/src/main/res/drawable/ic_keyboard_key_backspace.xml
@@ -16,8 +16,8 @@
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="@dimen/keyboard_key_icon_backspace_size"
+    android:height="@dimen/keyboard_key_icon_backspace_size"
     android:tint="?colorButtonNormal"
     android:tintMode="src_in"
     android:viewportHeight="24"
