--- a/app/src/main/res/drawable/ic_keyboard_key_close.xml
+++ b/app/src/main/res/drawable/ic_keyboard_key_close.xml
@@ -16,8 +16,8 @@
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:width="32dp"
-    android:height="32dp"
+    android:width="@dimen/keyboard_key_icon_size"
+    android:height="@dimen/keyboard_key_icon_size"
     android:tint="?colorButtonNormal"
     android:tintMode="src_in"
     android:viewportHeight="16"
