--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -31,6 +31,6 @@
     <dimen name="keyboard_view_root_padding_top">3dp</dimen>
     <dimen name="keyboard_view_padding">3dp</dimen>
     <dimen name="keyboard_view_key_text_size">12sp</dimen>
-    <dimen name="keyboard_view_key_punctuation_height">14dp</dimen>
+    <dimen name="keyboard_view_key_punctuation_text_size">14sp</dimen>
 
 </resources>
