--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -30,7 +30,7 @@
 
     <dimen name="keyboard_view_root_padding_top">10dp</dimen>
     <dimen name="keyboard_view_padding">5dp</dimen>
-    <dimen name="keyboard_view_key_text_size">22dp</dimen>
-    <dimen name="keyboard_view_key_punctuation_height">26dp</dimen>
+    <dimen name="keyboard_view_key_text_size">22sp</dimen>
+    <dimen name="keyboard_view_key_punctuation_text_size">26sp</dimen>
 
 </resources>
