--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -31,6 +31,6 @@
     <dimen name="keyboard_view_root_padding_top">5dp</dimen>
     <dimen name="keyboard_view_padding">5dp</dimen>
     <dimen name="keyboard_view_key_text_size">14sp</dimen>
-    <dimen name="keyboard_view_key_punctuation_height">16dp</dimen>
+    <dimen name="keyboard_view_key_punctuation_text_size">16sp</dimen>
 
 </resources>
