Updated app icon

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -15,32 +15,26 @@
    limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:tint="#FFFFFF"
+    android:viewportHeight="108"
+    android:viewportWidth="108">
+    <group
+        android:scaleX="0.29748502"
+        android:scaleY="0.29748502"
+        android:translateX="29.16"
+        android:translateY="30.45801">
+        <group android:translateY="129.02344">
+            <path
+                android:fillColor="#FFFFFF"
+                android:pathData="M77,-48.78125Q77,-30.5625,59.625,-24.40625Q59.625,-20.75,66.8125,-11.171875Q74,-1.59375,74,-1.59375Q74,-0.5,66.875,-0.140625Q62.1875,0.078125,59.828125,0.078125Q54.78125,0.078125,53.5,-2.3125Q50.140625,-8.078125,42.90625,-19.109375Q42.015625,-20.28125,26.875,-20.078125L24,-20L24,-2.09375Q24,0.140625,22.484375,0.140625Q20.296875,0.140625,16,0.0625Q11.703125,-0,9.515625,-0Q8,-0,8,-2.734375L8,-46.375Q8,-54.9375,7.5,-71.984375Q7,-89.03125,7,-97.59375Q7,-98.859375,8.296875,-99Q10.53125,-99.0625,15.09375,-99.25Q16.046875,-99.3125,19.109375,-99.6875Q21.546875,-100,23.046875,-100Q24,-100,24,-98.34375Q24,-94.640625,23.5,-87.265625Q23,-79.90625,23,-76.1875L23,-58.4375Q23,-57,23.65625,-57Q25.390625,-58.375,28.875,-61.0625Q41.046875,-70,52.0625,-70Q62.796875,-70,69.609375,-64.671875Q77,-58.859375,77,-48.78125ZM60,-45.140625Q60,-55,46.578125,-55Q36.5625,-55,24,-43L24,-32.09375Q29.875,-31,38.21875,-31Q46.640625,-31,52.59375,-34.03125Q60,-37.828125,60,-45.140625Z"
+                tools:ignore="VectorPath" />
+            <path
+                android:fillColor="#FFFFFF"
+                android:pathData="M162,-30.703125Q162,-18.328125,154.70312,-9.453125Q147,-0.140625,135.125,-0.140625Q130.6875,-0.140625,121.75,-0.34375Q112.828125,-0.5625,108.390625,-0.5625Q105.125,-0.5625,98.5625,-0.28125Q92,0,88.734375,0Q87,0,87,-1.625Q87,-9.390625,87.5,-24.9375Q88,-40.5,88,-48.265625Q88,-56.453125,87.5,-72.859375Q87,-89.265625,87,-97.453125Q87,-99,88.734375,-99Q94.9375,-99,107.390625,-98.921875Q119.84375,-98.859375,126.109375,-98.859375Q140.71875,-98.859375,149.42188,-93.40625Q160,-86.75,160,-72.75Q160,-67.921875,157.15625,-62.703125Q154.32812,-57.484375,150.29688,-54.828125Q148.23438,-53.5,148.23438,-53.078125Q148.23438,-52.65625,150.26562,-51.515625Q155.57812,-48.53125,158.78125,-42.734375Q162,-36.953125,162,-30.703125ZM142,-71.0625Q142,-80.6875,133.25,-84.015625Q127.96875,-86,115.953125,-86Q104.28125,-86,104.28125,-84.296875Q104.28125,-82.046875,104.0625,-77.546875Q103.859375,-73.046875,103.859375,-70.734375Q103.859375,-69.15625,103.921875,-65.875Q104,-62.609375,104,-60.984375Q104,-59,119.703125,-59Q142,-59,142,-71.0625ZM144,-31.15625Q144,-39.90625,136.4375,-42.984375Q131.64062,-45,121.5,-45Q104,-45,104,-43.0625L104,-31.296875Q104,-28.703125,104.140625,-23.390625Q104.28125,-18.09375,104.28125,-15.4375Q104.28125,-14.71875,108.71875,-14.359375Q113.171875,-14,121.921875,-14Q132.89062,-14,137.6875,-16.9375Q144,-20.8125,144,-31.15625Z"
+                tools:ignore="VectorPath" />
+        </group>
+    </group>
 </vector>
