--- a/app/src/main/res/xml/keyboard_symbol.xml
+++ b/app/src/main/res/xml/keyboard_symbol.xml
@@ -21,7 +21,7 @@
     app:keyWidth="@dimen/keyboard_key_size"
     tools:ignore="UnusedResources">
 
-    <Row app:rowEdgeFlags="top">
+    <Row>
         <Key
             app:keyEdgeFlags="left"
             app:keyLabel="1" />
@@ -131,7 +131,7 @@
             app:keyLabel="&gt;" />
     </Row>
 
-    <Row app:rowEdgeFlags="bottom">
+    <Row>
         <Key
             app:codes="@integer/keycode_close_keyboard"
             app:keyEdgeFlags="left"
