--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -20,8 +20,8 @@
         <attr name="keyBackground" format="reference" />
         <attr name="keyTextColorPrimary" format="color" />
         <attr name="useKeyTextColorSecondary" format="boolean" />
+        <attr name="useKeyPreview" format="boolean" />
         <attr name="keyTextColorSecondary" format="color" />
-        <attr name="keyTextSize" format="dimension" />
         <attr name="labelTextSize" format="dimension" />
         <attr name="fontFamily" format="string" />
         <attr name="textStyle" format="enum">
